force-app/main/default/objects/Copado_License_Cleanup_Schedule__mdt/Copado_License_Cleanup_Schedule__mdt.object-meta.xml
<CustomObject>
    <label>Copado License Cleanup Schedule</label>
    <pluralLabel>Copado License Cleanup Schedules</pluralLabel>
</CustomObject>