force-app/main/default/objects/Copado_License_Cleanup_Schedule__mdt/fields/Copado_Release_Team_Emails__c.field-meta.xml
<CustomField>
    <fullName>Copado_Release_Team_Emails__c</fullName>
    <label>Copado_Release_Team_Emails</label>
    <length>225</length>
    <type>Text</type>
</CustomField>