force-app/main/default/objects/Copado_License_Cleanup_Schedule__mdt/fields/Run_Days__c.field-meta.xml
<CustomField>
    <fullName>Run_Days__c</fullName>
    <label>Run Days</label>
    <length>225</length>
    <type>Text</type>
</CustomField>