force-app/main/default/objects/Copado_License_Cleanup_Schedule__mdt/fields/Run_Time_HH_mm__c.field-meta.xml
<CustomField>
    <fullName>Run_Time_HH_mm__c</fullName>
    <label>Run Time (HH:mm)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>