force-app/main/default/objects/Copado_License_Cleanup_Schedule__mdt/fields/Schedule_Description__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Description__c</fullName>
    <label>Schedule Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>